# QBarcode

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  annotated.html  array2d_8h_source.html  barcode_8h_source.html  classes.html  classqbar_1_1_array2_d-members.html  classqbar_1_1_array2_d.html  classqbar_1_1_barcode-members.html  classqbar_1_1_barcode.html  classqbar_1_1_barcode__inherit__graph.map  classqbar_1_1_barcode__inherit__graph.md5  classqbar_1_1_payload-members.html  classqbar_1_1_payload.html  classqbar_1_1_payload__inherit__graph.map  classqbar_1_1_payload__inherit__graph.md5  classqbar_1_1_payload_qr_string-members.html  classqbar_1_1_payload_qr_string.html  classqbar_1_1_payload_qr_string__coll__graph.map  classqbar_1_1_payload_qr_string__inherit__graph.md5  classqbar_1_1_payload_qr_url-members.html  classqbar_1_1_payload_qr_url.html  classqbar_1_1_payload_qr_url__coll__graph.map  classqbar_1_1_payload_qr_url__inherit__graph.md5  classqbar_1_1_payload_qr_wifi-members.html  classqbar_1_1_payload_qr_wifi.html  classqbar_1_1_payload_qr_wifi__coll__graph.md5  classqbar_1_1_payload_qr_wifi__inherit__graph.map  classqbar_1_1_qr_code-members.html  classqbar_1_1_qr_code.html  classqbar_1_1_qr_code__coll__graph.map  classqbar_1_1_qr_code__inherit__graph.md5  classqbar_1_1_renderer-members.html  classqbar_1_1_renderer.html  classqbar_1_1_renderer__inherit__graph.map  classqbar_1_1_renderer__inherit__graph.md5  classqbar_1_1_renderer_qr_code-members.html  classqbar_1_1_renderer_qr_code.html  (+58 more)
docs/fragments/: Doxyfile-common.in  Doxyfile-internal.in  Doxyfile-public-api.in
include/qbarcode/: qbar_global.h.in  qbartypes.h
include/qbarcode/datas/: barcode.h  qrcode.h
include/qbarcode/payloads/: payload.h  payloadbase.h  payloadean13.h  payloadqrstring.h  payloadqrurl.h  payloadqrwifi.h
include/qbarcode/renderers/: renderer.h  rendererqrcode.h
include/qbarcode/tools/: array2d.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  pages_0.js  searchdata.js  (+2 more)
src/: qbartypes.cpp
src/backend/: eanutils.cpp  eanutils.h  qbarutils.cpp  qbarutils.h  qrcodeutils.cpp  qrcodeutils.h  typesqrencode.cpp  typesqrencode.h
src/datas/: barcode.cpp  barcode_priv.cpp  barcode_priv.h  qrcode.cpp  qrcode_priv.cpp  qrcode_priv.h
src/payloads/: payload.cpp  payload_priv.cpp  payload_priv.h  payloadbase.cpp  payloadbase_priv.cpp  payloadbase_priv.h  payloadean13.cpp  payloadqrstring.cpp  payloadqrurl.cpp  payloadqrwifi.cpp
src/renderers/: renderer.cpp  renderer_priv.cpp  renderer_priv.h  rendererqrcode.cpp
src/tools/: array2d.h
tests/: CMakeLists.txt  payloads_tests.cpp  qrcode_tests.cpp
tests/helpers/: testsrsc.cpp  testsrsc.h  testsutils.cpp  testsutils.h
